// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Platform Constants should have specific properties: all exported constants 1`] = `
{
  "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS": "entitlements",
  "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS_APP_TYPES": {
    "ENTITLED": "is_entitled",
  },
  "PLATFORM_API_RESPONSE_USER_IDENTITY": "identity",
  "PLATFORM_API_RESPONSE_USER_IDENTITY_TYPES": {
    "USER": "user",
  },
  "PLATFORM_API_RESPONSE_USER_IDENTITY_USER_TYPES": {
    "ORG_ADMIN": "is_org_admin",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_APP_TYPES": {
    "SUBSCRIPTIONS": "subscriptions",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_OPERATION_TYPES": {
    "ALL": "*",
    "READ": "read",
    "WRITE": "write",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_RESOURCE_TYPES": {
    "ALL": "*",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_TYPES": {
    "PERMISSION": "permission",
    "RESOURCE_DEFS": "resourceDefinitions",
  },
  "default": {
    "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS": "entitlements",
    "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS_APP_TYPES": {
      "ENTITLED": "is_entitled",
    },
    "PLATFORM_API_RESPONSE_USER_IDENTITY": "identity",
    "PLATFORM_API_RESPONSE_USER_IDENTITY_TYPES": {
      "USER": "user",
    },
    "PLATFORM_API_RESPONSE_USER_IDENTITY_USER_TYPES": {
      "ORG_ADMIN": "is_org_admin",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_APP_TYPES": {
      "SUBSCRIPTIONS": "subscriptions",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_OPERATION_TYPES": {
      "ALL": "*",
      "READ": "read",
      "WRITE": "write",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_RESOURCE_TYPES": {
      "ALL": "*",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_TYPES": {
      "PERMISSION": "permission",
      "RESOURCE_DEFS": "resourceDefinitions",
    },
  },
  "platformConstants": {
    "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS": "entitlements",
    "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS_APP_TYPES": {
      "ENTITLED": "is_entitled",
    },
    "PLATFORM_API_RESPONSE_USER_IDENTITY": "identity",
    "PLATFORM_API_RESPONSE_USER_IDENTITY_TYPES": {
      "USER": "user",
    },
    "PLATFORM_API_RESPONSE_USER_IDENTITY_USER_TYPES": {
      "ORG_ADMIN": "is_org_admin",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_APP_TYPES": {
      "SUBSCRIPTIONS": "subscriptions",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_OPERATION_TYPES": {
      "ALL": "*",
      "READ": "read",
      "WRITE": "write",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_RESOURCE_TYPES": {
      "ALL": "*",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_TYPES": {
      "PERMISSION": "permission",
      "RESOURCE_DEFS": "resourceDefinitions",
    },
  },
}
`;

exports[`Platform Constants should have specific properties: specific constants 1`] = `
{
  "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS": "entitlements",
  "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS_APP_TYPES": {
    "ENTITLED": "is_entitled",
  },
  "PLATFORM_API_RESPONSE_USER_IDENTITY": "identity",
  "PLATFORM_API_RESPONSE_USER_IDENTITY_TYPES": {
    "USER": "user",
  },
  "PLATFORM_API_RESPONSE_USER_IDENTITY_USER_TYPES": {
    "ORG_ADMIN": "is_org_admin",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_APP_TYPES": {
    "SUBSCRIPTIONS": "subscriptions",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_OPERATION_TYPES": {
    "ALL": "*",
    "READ": "read",
    "WRITE": "write",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_RESOURCE_TYPES": {
    "ALL": "*",
  },
  "PLATFORM_API_RESPONSE_USER_PERMISSION_TYPES": {
    "PERMISSION": "permission",
    "RESOURCE_DEFS": "resourceDefinitions",
  },
}
`;
